--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -32,10 +32,10 @@ stages:
           sudo mv terraform /usr/local/bin/
           
           # Initialize Terraform
-          terraform init -backend-config="storage_account_name=${{env.storageAccountName}}" \
-                         -backend-config="container_name=${{env.containerName}}" \
-                         -backend-config="key=${{env.key}}" \
-                         -backend-config="access_key=${{env.accessKey}}"
+          terraform init -backend-config="storage_account_name=$(STORAGE_ACCOUNT_NAME)" \
+                         -backend-config="container_name=$(CONTAINER_NAME)" \
+                         -backend-config="key=$(KEY)" \
+                         -backend-config="access_key=$(ACCESS_KEY)"
           # Apply Terraform configuration
           terraform apply -auto-approve
 
