--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -7,7 +7,7 @@ variables:
 stages:
 - stage: TerraformInitApply
   jobs:
-  - job: Terraform
+  - job: Terraform1
     pool:
       vmImage: 'ubuntu-latest'
     steps:
