Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,9 +36,9 @@ stages:
           command: 'init'
           backendServiceArm: $(bk_service_connection)
           backendAzureRmResourceGroupName: $(bk_resource_group)
-          backendAzureRmStorageAccountName: '$(STORAGE_ACCCOUNT_NAME)'
-          backendAzureRmContainerName: '$(CONTAINER_NAME)'
-          backendAzureRmKey: '$(KEY)'
+          backendAzureRmStorageAccountName: $(STORAGE_ACCCOUNT_NAME)
+          backendAzureRmContainerName: $(CONTAINER_NAME)
+          backendAzureRmKey: $(KEY)
         displayName: Terraform Init
         
       - task: TerraformTaskV4@4
@@ -64,9 +64,9 @@ stages:
           command: 'init'
           backendServiceArm: $(bk_service_connection)
           backendAzureRmResourceGroupName: $(bk_resource_group)
-          backendAzureRmStorageAccountName: '$(STORAGE_ACCCOUNT)'
-          backendAzureRmContainerName: '$(CONTAINER_NAME)'
-          backendAzureRmKey: '$(KEY)'
+          backendAzureRmStorageAccountName: $(STORAGE_ACCCOUNT)
+          backendAzureRmContainerName: $(CONTAINER_NAME)
+          backendAzureRmKey: $(KEY)
         displayName: Terraform Init
       - task: TerraformTaskV4@4
         inputs:
