--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,8 @@ variables:
   value: 'rg-backend-tf'
 - name: bk_service_connection
   value: 'SP_AzureRM_Pokroy_Testing'
+- name: bk_storage_account
+  value: 'terraformpokroytesting'
   
 
 
@@ -37,7 +39,7 @@ stages:
           command: 'init'
           backendServiceArm: $(bk_service_connection)
           backendAzureRmResourceGroupName: $(bk_resource_group)
-          backendAzureRmStorageAccountName: $(STORAGE_ACCCOUNT_NAME)
+          backendAzureRmStorageAccountName: $(bk_storage_account)
           backendAzureRmContainerName: $(CONTAINER_NAME)
           backendAzureRmKey: $(KEY)
         displayName: Terraform Init
