--- a/azure-pipelines-agenttesting.yml
+++ b/azure-pipelines-agenttesting.yml
@@ -89,5 +89,35 @@ stages:
           environmentServiceNameAzureRM: 'SP_AzureRM_Pokroy_Testing'
         displayName: Terraform show
 
+
+  - stage: destroy
+    displayName: 'Terraform Destroy'
+    dependsOn: []
+    jobs:
+    - job: destroy
+      steps:
+      - task: TerraformInstaller@1
+        inputs:
+          terraformVersion: 'latest'
+        displayName: Install TF
+
+      - task: TerraformTaskV4@4
+        inputs:
+          provider: 'azurerm'
+          command: 'init'
+          backendServiceArm: $(bk_service_connection)
+          backendAzureRmResourceGroupName: $(bk_resource_group)
+          backendAzureRmStorageAccountName: $(bk_storage_account)
+          backendAzureRmContainerName: $(CONTAINER_NAME)
+          backendAzureRmKey: $(KEY)
+        displayName: Terraform Init
+      - task: TerraformTaskV4@4
+        inputs:
+          provider: 'azurerm'
+          command: 'destroy'
+          environmentServiceNameAzureRM: 'SP_AzureRM_Pokroy_Testing'
+          args: '-auto-approve'
+        displayName: Terraform Destroy
+
       
         
