--- a/azure-pipelines-agenttesting.yml
+++ b/azure-pipelines-agenttesting.yml
@@ -15,6 +15,8 @@ variables:
   value: 'SP_AzureRM_Pokroy_Testing'
 - name: bk_storage_account
   value: 'terraformpokroytesting'
+- name: 'SkipDestroy'
+  value: 'true'
  
 stages:
   - stage: tfvalidate
@@ -92,6 +94,7 @@ stages:
 
   - stage: destroy
     displayName: 'Terraform Destroy'
+    condition: and(succeeded(), eq(variables['SkipDestroy'], 'false'))
     dependsOn: []
     jobs:
     - job: destroy
