--- a/azure-pipelines-agenttesting.yml
+++ b/azure-pipelines-agenttesting.yml
@@ -1,7 +1,7 @@
 # Utiliza Terraform Extension {TESTING}
 
 trigger:
-- none
+- develop
 
 pool:
   name: ccvpw-ansible
@@ -16,7 +16,7 @@ variables:
 - name: bk_storage_account
   value: 'terraformpokroytesting'
 - name: 'Destroy'
-  value: 'false'
+  value: 'true'
 - name: 'NSG_NIC_LINK'
   value: 'true'
  
