--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,14 @@ stages:
           backendAzureRmContainerName: $(CONTAINER_NAME)
           backendAzureRmKey: $(KEY)
         displayName: Terraform Init
+
+      - task: TerraformTaskV4@4
+        inputs:
+          provider: 'azurerm'
+          command: 'custom'
+          customCommand: 'import'
+          commandOptions: 'azurerm_resource_group.rg /subscriptions/4c6a923c-ddba-4a3e-8060-3b3d4628f8b5/resourceGroups/rg-pokroy-tf-demo-03'
+        displayName: Terraform Import Resource Group
         
       - task: TerraformTaskV4@4
         inputs:
