--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,10 @@ stages:
         displayName: Install TF
 
       - script: |
+          terraform init -upgrade
+        displayName: Initialize Terraform with upgrade        
+
+      - script: |
           # ensure ssh public key is available
           echo "$(SSH_PUBLIC_KEY)" >  ~/.ssh/id_rsa.pub
       
