--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,11 +75,15 @@ stages:
           backendAzureRmKey: $(KEY)
         displayName: Terraform Init
 
+  
+
       - task: TerraformTaskV4@4
         inputs:
           provider: 'azurerm'
           command: 'plan'
           environmentServiceNameAzureRM: 'SP_AzureRM_Pokroy_Testing'
+        env:
+          TF_LOG: 'TRACE'
         displayName: Terraform Plan
       - task: TerraformTaskV4@4
         inputs:
