--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
 - name: bk_storage_account
   value: 'terraformpokroytesting'
 - name: 'Destroy'
-  value: 'true'
+  value: 'true¡'
  
 stages:
   - stage: tfvalidate
